--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ input[type="submit"]:hover {
 .thank-you-message {
     display: none;
     margin-top: 20px;
-    color: #28a745;
+    color: #1d5028;
     font-size: 20px;
     font-weight: 700;
 }
